--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,6 +2,7 @@ version: "3"
 services:
   db:
     image: postgres:11
+    container_name: "my_postgres"
     ports:
       - "54320:5432"
     volumes:
