chore: change front-end build process

--- a/front/package.json
+++ b/front/package.json
@@ -12,7 +12,7 @@
   },
   "scripts": {
     "start": "react-scripts start",
-    "build": "react-scripts build",
+    "build": "react-scripts build && rm -rf /var/www/gotodo/build && cp -r build /var/www/gotodo/",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
