--- a/front/package.json
+++ b/front/package.json
@@ -3,7 +3,9 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "axios": "^0.19.2",
     "bootstrap": "^4.3.1",
+    "node-sass": "^4.13.1",
     "rc-time-picker": "^3.7.2",
     "react": "^16.10.1",
     "react-bootstrap": "^1.0.0-beta.12",
@@ -31,8 +33,5 @@
       "last 1 safari version"
     ]
   },
-  "devDependencies": {
-    "axios": "^0.19.0",
-    "node-sass": "^4.12.0"
-  }
+  "devDependencies": {}
 }
