#3 フロントエンドのデプロイのためのコンテナ作成

--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,4 +1,6 @@
 version: '3'
+volumes:
+  hoge:
 services:
   db:
     build: ./docker/postgres/
@@ -16,6 +18,13 @@ services:
       - 8000:8000
     env_file:
       - .env.db
+  node:
+    build: ./docker/node/
+    container_name: 'my_node'
+    volumes:
+      - ./front:/app
+      - hoge:/app/node_modules
+    command: sh -c "apk --no-cache add --virtual native-deps g++ gcc libgcc libstdc++ linux-headers make python && npm install --quiet node-gyp -g && npm install --quiet && cd /app && npm install && npm start && apk del native-deps"
   proxy:
     build: ./docker/nginx/
     container_name: 'my_nginx'
@@ -26,3 +35,4 @@ services:
       - ./docker/nginx/conf.d:/etc/nginx/conf.d
     links:
       - 'app'
+      - 'node'
